--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cron": "^3.1.4",
     "crypto": "^1.0.1",
     "node-cron": "^3.0.2",
+    "puppeteer": "^21.5.1",
     "simple-git": "^3.20.0"
   }
 }
